[package]
name = "create-social-card-wasm"
description = "A WebAssembly wrapper for create-social-card"
version = "0.3.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"
repository = "https://github.com/dimfeld/create-social-card-wasm"
license = "Apache/MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
create-social-card = { "git"="https://github.com/dimfeld/create-social-card", tag="v0.2.0" }
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
image = "0.23.14"
ab_glyph = "0.2.23"
serde = { version="1.0.197", features=["derive"] }
thiserror = "1.0.58"
js-sys = "0.3.69"
serde-wasm-bindgen = "0.1.3"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
